# PlanaBot

./: README.md  README.rst  format.sh  main.py  pyproject.toml  requirements.txt
plana/: __init__.py  core.py  events.py
plana/actions/: __init__.py  base.py  get_group_member_info.py  get_group_msg_history.py  get_login_info.py  quick_operation.py  reply.py  send_group_msg.py  send_private_msg.py
plana/core/: config.py  plana.py  plugin.py
plana/messages/: __init__.py  base_message.py  group_message.py  message.py  private_message.py  sender.py
plana/objects/: get_group_member_info.py  get_login_info.py  notice.py  send_group_msg.py  send_private_msg.py
plana/objects/actions/: action.py  get_group_member_info.py  get_login_info.py  send_group_msg.py  send_private_msg.py
plana/objects/messages/: array_messages.py  base.py  group_message.py  private_message.py  reply.py
plugins/: bilibili.py  echo.py  whoareu.py
plugins/bilibili/: __init__.py  bilibili.py
plugins/chat/: __init__.py  chat.py  prompts.py  utils.py
plugins/mikan/: __init__.py  mikan.py
plugins/tldr/: __init__.py  assistant.py  prompts.py  tldr.py
