[tool.poetry]
name = "plana"
version = "0.1.0"
description = ""
authors = ["-LAN- <laipz8200@outlook.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
openai = "^0.27.7"
tiktoken = "^0.4.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
pyyaml = "^6.0"
apscheduler = "^3.10.1"
markdownify = "^0.11.6"
readability-lxml = "^0.8.1"
langchain = "^0.0.179"
openai-agent = "^0.1.0"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.1.1"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
